framec/tests/snapshots/cpp_snapshots__return_explicit.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"09_return_explicit\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>

class ReturnExplicitFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    ReturnExplicitFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class ReturnExplicitFrameContext {
public:
    ReturnExplicitFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    ReturnExplicitFrameContext(ReturnExplicitFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class ReturnExplicitCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<ReturnExplicitFrameEvent> forward_event;
    std::shared_ptr<ReturnExplicitCompartment> parent_compartment;

    explicit ReturnExplicitCompartment(const std::string& state) : state(state) {}
};

class ReturnExplicit {
private:
    std::vector<std::shared_ptr<ReturnExplicitCompartment>> _state_stack;
    std::shared_ptr<ReturnExplicitCompartment> __compartment;
    std::shared_ptr<ReturnExplicitCompartment> __next_compartment;
    std::vector<ReturnExplicitFrameContext> _context_stack;

    std::shared_ptr<ReturnExplicitCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<ReturnExplicitCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<ReturnExplicitCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<ReturnExplicitCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(ReturnExplicitFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            ReturnExplicitFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                ReturnExplicitFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                ReturnExplicitFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(ReturnExplicitFrameEvent& __e) {
        if (__compartment->state == "Judging") {
            _state_Judging(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<ReturnExplicitCompartment> next) {
        __next_compartment = next;

    }

    void _state_Judging(ReturnExplicitFrameEvent& __e, std::shared_ptr<ReturnExplicitCompartment> compartment) {
        if (__e._message == "decide") {
            this->_s_Judging_hdl_user_decide(__e, compartment);
            return;
        }

    }

    void _s_Judging_hdl_user_decide(ReturnExplicitFrameEvent& __e, std::shared_ptr<ReturnExplicitCompartment> compartment) {
        auto score = std::any_cast<int>(__e._parameters[0]);
                        if score >= 60 {
        _context_stack.back()._return = std::any(std::string("pass"));
                            return;
                        }
        _context_stack.back()._return = std::any(std::string("fail"));
                        return;

    }

public:
    ReturnExplicit() {
        __compartment = __prepareEnter("Judging", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static ReturnExplicit __create() {
        ReturnExplicit c;
        ReturnExplicitFrameEvent __e("$>", c.__compartment->enter_args);
        ReturnExplicitFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Judging", {"Judging"} },
        };
    }

    std::string decide(int score) {
        ReturnExplicitFrameEvent __e("decide", std::vector<std::any>{score});
        ReturnExplicitFrameContext __ctx(std::move(__e), std::any(std::string()));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        auto __result = std::any_cast<std::string>(std::move(_context_stack.back()._return));
        _context_stack.pop_back();
        return __result;

    }
};
