framec/tests/snapshots/cpp_snapshots__selfcall.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>

class SelfCallFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    SelfCallFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class SelfCallFrameContext {
public:
    SelfCallFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    SelfCallFrameContext(SelfCallFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class SelfCallCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<SelfCallFrameEvent> forward_event;
    std::shared_ptr<SelfCallCompartment> parent_compartment;

    explicit SelfCallCompartment(const std::string& state) : state(state) {}
};

class SelfCall {
private:
    std::vector<std::shared_ptr<SelfCallCompartment>> _state_stack;
    std::shared_ptr<SelfCallCompartment> __compartment;
    std::shared_ptr<SelfCallCompartment> __next_compartment;
    std::vector<SelfCallFrameContext> _context_stack;

    std::shared_ptr<SelfCallCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<SelfCallCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<SelfCallCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<SelfCallCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(SelfCallFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            SelfCallFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                SelfCallFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                SelfCallFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(SelfCallFrameEvent& __e) {
        if (__compartment->state == "Active") {
            _state_Active(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<SelfCallCompartment> next) {
        __next_compartment = next;

    }

    void _state_Active(SelfCallFrameEvent& __e, std::shared_ptr<SelfCallCompartment> compartment) {
        if (__e._message == "kick") {
            this->_s_Active_hdl_user_kick(__e, compartment);
            return;
        }
        if (__e._message == "report") {
            this->_s_Active_hdl_user_report(__e, compartment);
            return;
        }

    }

    void _s_Active_hdl_user_kick(SelfCallFrameEvent& __e, std::shared_ptr<SelfCallCompartment> compartment) {
        self.count = self.count + 1
        this->report();
        if (!_context_stack.empty() && _context_stack.back()._transitioned) return;

    }

    void _s_Active_hdl_user_report(SelfCallFrameEvent& __e, std::shared_ptr<SelfCallCompartment> compartment) {
        _context_stack.back()._return = std::any(self.count);

    }

public:
    i32 count = 0;

    SelfCall() {
        __compartment = __prepareEnter("Active", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static SelfCall __create() {
        SelfCall c;
        SelfCallFrameEvent __e("$>", c.__compartment->enter_args);
        SelfCallFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Active", {"Active"} },
        };
    }

    void kick() {
        SelfCallFrameEvent __e("kick");
        SelfCallFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }

    int report() {
        SelfCallFrameEvent __e("report");
        SelfCallFrameContext __ctx(std::move(__e), std::any(int()));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        auto __result = std::any_cast<int>(std::move(_context_stack.back()._return));
        _context_stack.pop_back();
        return __result;

    }
};
